structmeta-tests/tests/compile_fail/struct_meta/missing_unnamed_argument_inner.rs
#[structmeta_tests::attr_required_unnamed2_inner(value(10), after = 20)]
fn my_func() {}

fn main() {}
